# vax-stock-public

./: .gitignore  00_README.md  01_principles.md  06_quant_framework.md  09_changelog.md  10_known_issues.md  10_layered_entry_standards.md  11_data_integrity_rules.md  11_validation_roadmap.md  12_factor_reassessment_20260619.md  14_intraday_protocol.md  AGENTS.md  CLAUDE.md  README.md  manage.py  pyproject.toml
deploy/: README.md  intraday-watch.service  intraday_rules.md  stock-api.service  vaxstock-eod.service  vaxstock-eod.timer
script/: ai_track_system.py  api.py  hot_sector_scanner.py  intraday_watch.py  macro_indicators.py  opportunity_scanner.py  stock_report_enhanced.py  tushare_source.py  us_market.py
script/backtest/: CACHE_GUIDE.md  config.py  data_loader.py  data_loader.py.20260616_0901.bak  factor_calculator.py  factor_calculator.py.20260616_0901.bak  ic_engine.py  main.py  matplotlibrc_chinese.py  quantile_engine.py  report_generator.py
script/config/: holdings.json  intraday_rules.md  secrets.json  secrets.json.example  watch_rules.json  watchlist.json
src/vaxstock/: __init__.py  config.py  util.py
tests/: test_deploy_units.py
tests/indicators/: test_macro.py  test_regime.py
tests/report/: test_claude_md.py  test_notify.py  test_store.py
tests/research/: test_layer2_eval.py
tests/services/: test_api.py  test_collect.py  test_eod.py  test_eod_predictor.py  test_eval_recorder.py  test_forecast_recorder.py  test_intraday.py  test_pool_admin.py  test_t1_baseline.py
tests/sources/: test_codex.py
var/: pool_audit.jsonl  regime_history.json
(+73 files in other folders)
